// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkModalInner should render correctly 1`] = `
<DocumentFragment>
  <section
    aria-labelledby="bpk-modal-heading-my-modal"
    class="bpk-modal bpk-modal--full-screen-mobile"
    id="my-modal"
    role="dialog"
    tabindex="-1"
  >
    <header
      class="bpk-modal__header"
    >
      <nav
        aria-labelledby="bpk-modal-heading-my-modal"
        class="bpk-navigation-bar bpk-modal__navigation"
      >
        <h2
          class="bpk-modal__heading"
          id="bpk-modal-heading-my-modal"
        >
          Modal title
        </h2>
        <button
          aria-label="Close"
          class="bpk-close-button bpk-modal__close-button bpk-navigation-bar__trailing-item"
          title="Close"
          type="button"
        >
          <svg
            class="bpk-close-button__icon"
            height="8"
            style="width: .5rem; height: .5rem;"
            viewBox="0 0 16 16"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.587 3.467a1.5 1.5 0 1 0-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 0 0 2.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 0 0 2.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 0 0-2.122-2.12l-6.44 6.438-6.44-6.44z"
            />
          </svg>
        </button>
      </nav>
    </header>
    <div
      class="bpk-modal__content bpk-modal__content--padded"
    >
      Modal content
    </div>
  </section>
</DocumentFragment>
`;

exports[`BpkModalInner should render correctly when is iPhone 1`] = `
<DocumentFragment>
  <section
    aria-labelledby="bpk-modal-heading-my-modal"
    class="bpk-modal bpk-modal--full-screen"
    id="my-modal"
    role="dialog"
    tabindex="-1"
  >
    <header
      class="bpk-modal__header"
    >
      <nav
        aria-labelledby="bpk-modal-heading-my-modal"
        class="bpk-navigation-bar bpk-modal__navigation"
      >
        <h2
          class="bpk-modal__heading"
          id="bpk-modal-heading-my-modal"
        >
          Modal title
        </h2>
        <button
          aria-label="Close"
          class="bpk-close-button bpk-modal__close-button bpk-navigation-bar__trailing-item"
          title="Close"
          type="button"
        >
          <svg
            class="bpk-close-button__icon"
            height="8"
            style="width: .5rem; height: .5rem;"
            viewBox="0 0 16 16"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.587 3.467a1.5 1.5 0 1 0-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 0 0 2.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 0 0 2.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 0 0-2.122-2.12l-6.44 6.438-6.44-6.44z"
            />
          </svg>
        </button>
      </nav>
    </header>
    <div
      class="bpk-modal__content bpk-modal__content--padded"
    >
      Modal content
    </div>
  </section>
</DocumentFragment>
`;

exports[`BpkModalInner should render correctly when it does not fills the screen on mobile 1`] = `
<DocumentFragment>
  <section
    aria-labelledby="bpk-modal-heading-my-modal"
    class="bpk-modal"
    id="my-modal"
    role="dialog"
    tabindex="-1"
  >
    <header
      class="bpk-modal__header"
    >
      <nav
        aria-labelledby="bpk-modal-heading-my-modal"
        class="bpk-navigation-bar bpk-modal__navigation"
      >
        <h2
          class="bpk-modal__heading"
          id="bpk-modal-heading-my-modal"
        >
          Modal title
        </h2>
        <button
          aria-label="Close"
          class="bpk-close-button bpk-modal__close-button bpk-navigation-bar__trailing-item"
          title="Close"
          type="button"
        >
          <svg
            class="bpk-close-button__icon"
            height="8"
            style="width: .5rem; height: .5rem;"
            viewBox="0 0 16 16"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.587 3.467a1.5 1.5 0 1 0-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 0 0 2.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 0 0 2.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 0 0-2.122-2.12l-6.44 6.438-6.44-6.44z"
            />
          </svg>
        </button>
      </nav>
    </header>
    <div
      class="bpk-modal__content bpk-modal__content--padded"
    >
      Modal content
    </div>
  </section>
</DocumentFragment>
`;

exports[`BpkModalInner should render correctly when it has a className 1`] = `
<DocumentFragment>
  <section
    aria-labelledby="bpk-modal-heading-my-modal"
    class="bpk-modal my-classname bpk-modal--full-screen-mobile"
    id="my-modal"
    role="dialog"
    tabindex="-1"
  >
    <header
      class="bpk-modal__header"
    >
      <nav
        aria-labelledby="bpk-modal-heading-my-modal"
        class="bpk-navigation-bar bpk-modal__navigation"
      >
        <h2
          class="bpk-modal__heading"
          id="bpk-modal-heading-my-modal"
        >
          Modal title
        </h2>
        <button
          aria-label="Close"
          class="bpk-close-button bpk-modal__close-button bpk-navigation-bar__trailing-item"
          title="Close"
          type="button"
        >
          <svg
            class="bpk-close-button__icon"
            height="8"
            style="width: .5rem; height: .5rem;"
            viewBox="0 0 16 16"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.587 3.467a1.5 1.5 0 1 0-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 0 0 2.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 0 0 2.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 0 0-2.122-2.12l-6.44 6.438-6.44-6.44z"
            />
          </svg>
        </button>
      </nav>
    </header>
    <div
      class="bpk-modal__content bpk-modal__content--padded"
    >
      Modal content
    </div>
  </section>
</DocumentFragment>
`;

exports[`BpkModalInner should render correctly when it is fullscreen 1`] = `
<DocumentFragment>
  <section
    aria-labelledby="bpk-modal-heading-my-modal"
    class="bpk-modal bpk-modal--full-screen"
    id="my-modal"
    role="dialog"
    tabindex="-1"
  >
    <header
      class="bpk-modal__header"
    >
      <nav
        aria-labelledby="bpk-modal-heading-my-modal"
        class="bpk-navigation-bar bpk-modal__navigation"
      >
        <h2
          class="bpk-modal__heading"
          id="bpk-modal-heading-my-modal"
        >
          Modal title
        </h2>
        <button
          aria-label="Close"
          class="bpk-close-button bpk-modal__close-button bpk-navigation-bar__trailing-item"
          title="Close"
          type="button"
        >
          <svg
            class="bpk-close-button__icon"
            height="8"
            style="width: .5rem; height: .5rem;"
            viewBox="0 0 16 16"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.587 3.467a1.5 1.5 0 1 0-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 0 0 2.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 0 0 2.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 0 0-2.122-2.12l-6.44 6.438-6.44-6.44z"
            />
          </svg>
        </button>
      </nav>
    </header>
    <div
      class="bpk-modal__content bpk-modal__content--padded"
    >
      Modal content
    </div>
  </section>
</DocumentFragment>
`;

exports[`BpkModalInner should render correctly with a custom content classname 1`] = `
<DocumentFragment>
  <section
    aria-labelledby="bpk-modal-heading-my-modal"
    class="bpk-modal bpk-modal--full-screen-mobile"
    id="my-modal"
    role="dialog"
    tabindex="-1"
  >
    <header
      class="bpk-modal__header"
    >
      <nav
        aria-labelledby="bpk-modal-heading-my-modal"
        class="bpk-navigation-bar bpk-modal__navigation"
      >
        <h2
          class="bpk-modal__heading"
          id="bpk-modal-heading-my-modal"
        >
          Modal title
        </h2>
        <button
          aria-label="Close"
          class="bpk-close-button bpk-modal__close-button bpk-navigation-bar__trailing-item"
          title="Close"
          type="button"
        >
          <svg
            class="bpk-close-button__icon"
            height="8"
            style="width: .5rem; height: .5rem;"
            viewBox="0 0 16 16"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.587 3.467a1.5 1.5 0 1 0-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 0 0 2.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 0 0 2.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 0 0-2.122-2.12l-6.44 6.438-6.44-6.44z"
            />
          </svg>
        </button>
      </nav>
    </header>
    <div
      class="bpk-modal__content bpk-modal__content--padded my-classname"
    >
      Modal content
    </div>
  </section>
</DocumentFragment>
`;

exports[`BpkModalInner should render correctly with an accessory view 1`] = `
<DocumentFragment>
  <section
    aria-labelledby="bpk-modal-heading-my-modal"
    class="bpk-modal bpk-modal--full-screen-mobile"
    id="my-modal"
    role="dialog"
    tabindex="-1"
  >
    <header
      class="bpk-modal__header"
    >
      <nav
        aria-labelledby="bpk-modal-heading-my-modal"
        class="bpk-navigation-bar bpk-modal__navigation"
      >
        <span
          class="bpk-modal__accessory-view bpk-navigation-bar__leading-item"
        >
          <button
            class="bpk-link bpk-navigation-bar-button-link bpk-modal__leading-button"
            label="Close"
            type="button"
          >
            <div>
              Testing
            </div>
          </button>
        </span>
        <h2
          class="bpk-modal__heading"
          id="bpk-modal-heading-my-modal"
        >
          Modal title
        </h2>
        <button
          aria-label="Close"
          class="bpk-close-button bpk-modal__close-button bpk-navigation-bar__trailing-item"
          title="Close"
          type="button"
        >
          <svg
            class="bpk-close-button__icon"
            height="8"
            style="width: .5rem; height: .5rem;"
            viewBox="0 0 16 16"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.587 3.467a1.5 1.5 0 1 0-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 0 0 2.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 0 0 2.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 0 0-2.122-2.12l-6.44 6.438-6.44-6.44z"
            />
          </svg>
        </button>
      </nav>
    </header>
    <div
      class="bpk-modal__content bpk-modal__content--padded my-classname"
    >
      Modal content
    </div>
  </section>
</DocumentFragment>
`;

exports[`BpkModalInner should render correctly with closeText prop 1`] = `
<DocumentFragment>
  <section
    aria-labelledby="bpk-modal-heading-my-modal"
    class="bpk-modal bpk-modal--full-screen-mobile"
    id="my-modal"
    role="dialog"
    tabindex="-1"
  >
    <header
      class="bpk-modal__header"
    >
      <nav
        aria-labelledby="bpk-modal-heading-my-modal"
        class="bpk-navigation-bar bpk-modal__navigation"
      >
        <h2
          class="bpk-modal__heading"
          id="bpk-modal-heading-my-modal"
        >
          Modal title
        </h2>
        <button
          class="bpk-link bpk-modal__close-button bpk-navigation-bar__trailing-item"
          type="button"
        >
          Dismiss
        </button>
      </nav>
    </header>
    <div
      class="bpk-modal__content bpk-modal__content--padded"
    >
      Modal content
    </div>
  </section>
</DocumentFragment>
`;

exports[`BpkModalInner should render correctly with no padding 1`] = `
<DocumentFragment>
  <section
    aria-labelledby="bpk-modal-heading-my-modal"
    class="bpk-modal bpk-modal--full-screen-mobile"
    id="my-modal"
    role="dialog"
    tabindex="-1"
  >
    <header
      class="bpk-modal__header"
    >
      <nav
        aria-labelledby="bpk-modal-heading-my-modal"
        class="bpk-navigation-bar bpk-modal__navigation"
      >
        <h2
          class="bpk-modal__heading"
          id="bpk-modal-heading-my-modal"
        >
          Modal title
        </h2>
        <button
          aria-label="Close"
          class="bpk-close-button bpk-modal__close-button bpk-navigation-bar__trailing-item"
          title="Close"
          type="button"
        >
          <svg
            class="bpk-close-button__icon"
            height="8"
            style="width: .5rem; height: .5rem;"
            viewBox="0 0 16 16"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.587 3.467a1.5 1.5 0 1 0-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 0 0 2.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 0 0 2.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 0 0-2.122-2.12l-6.44 6.438-6.44-6.44z"
            />
          </svg>
        </button>
      </nav>
    </header>
    <div
      class="bpk-modal__content"
    >
      Modal content
    </div>
  </section>
</DocumentFragment>
`;

exports[`BpkModalInner should render correctly with wide prop 1`] = `
<DocumentFragment>
  <section
    aria-labelledby="bpk-modal-heading-my-modal"
    class="bpk-modal bpk-modal--wide bpk-modal--full-screen-mobile"
    id="my-modal"
    role="dialog"
    tabindex="-1"
  >
    <header
      class="bpk-modal__header"
    >
      <nav
        aria-labelledby="bpk-modal-heading-my-modal"
        class="bpk-navigation-bar bpk-modal__navigation"
      >
        <h2
          class="bpk-modal__heading"
          id="bpk-modal-heading-my-modal"
        >
          Modal title
        </h2>
        <button
          aria-label="Close"
          class="bpk-close-button bpk-modal__close-button bpk-navigation-bar__trailing-item"
          title="Close"
          type="button"
        >
          <svg
            class="bpk-close-button__icon"
            height="8"
            style="width: .5rem; height: .5rem;"
            viewBox="0 0 16 16"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.587 3.467a1.5 1.5 0 1 0-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 0 0 2.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 0 0 2.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 0 0-2.122-2.12l-6.44 6.438-6.44-6.44z"
            />
          </svg>
        </button>
      </nav>
    </header>
    <div
      class="bpk-modal__content bpk-modal__content--padded"
    >
      Modal content
    </div>
  </section>
</DocumentFragment>
`;
